// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switcher style params color brand 1`] = `
<DocumentFragment>
  <label
    class="QxSwitcher QxSwitcher_size_medium QxSwitcher_color_brand QxSwitcher_position_left css-1p0djy8-QxSwitcher-root"
    data-testid="testStyleParams-color-brand"
  >
    <input
      class="QxSwitcher-input css-cekb1n-QxSwitcher-input"
      tabindex="0"
      type="checkbox"
      value=""
    />
    <div
      class="QxSwitcher-toggleContainer css-58wc0x-QxSwitcher-toggleContainer"
    >
      <div
        class="QxSwitcher-toggle css-1yi6y3z-QxSwitcher-toggle"
      />
    </div>
    <div
      class="QxSwitcher-content css-18m9ids-QxSwitcher-content"
    >
      Статус
    </div>
  </label>
</DocumentFragment>
`;

exports[`Switcher style params color danger 1`] = `
<DocumentFragment>
  <label
    class="QxSwitcher QxSwitcher_size_medium QxSwitcher_color_danger QxSwitcher_position_left css-1wts74u-QxSwitcher-root"
    data-testid="testStyleParams-color-danger"
  >
    <input
      class="QxSwitcher-input css-cekb1n-QxSwitcher-input"
      tabindex="0"
      type="checkbox"
      value=""
    />
    <div
      class="QxSwitcher-toggleContainer css-1hu55cy-QxSwitcher-toggleContainer"
    >
      <div
        class="QxSwitcher-toggle css-1yi6y3z-QxSwitcher-toggle"
      />
    </div>
    <div
      class="QxSwitcher-content css-18m9ids-QxSwitcher-content"
    >
      Статус
    </div>
  </label>
</DocumentFragment>
`;

exports[`Switcher style params color info 1`] = `
<DocumentFragment>
  <label
    class="QxSwitcher QxSwitcher_size_medium QxSwitcher_color_info QxSwitcher_position_left css-scv8jf-QxSwitcher-root"
    data-testid="testStyleParams-color-info"
  >
    <input
      class="QxSwitcher-input css-cekb1n-QxSwitcher-input"
      tabindex="0"
      type="checkbox"
      value=""
    />
    <div
      class="QxSwitcher-toggleContainer css-1hu55cy-QxSwitcher-toggleContainer"
    >
      <div
        class="QxSwitcher-toggle css-1yi6y3z-QxSwitcher-toggle"
      />
    </div>
    <div
      class="QxSwitcher-content css-18m9ids-QxSwitcher-content"
    >
      Статус
    </div>
  </label>
</DocumentFragment>
`;

exports[`Switcher style params color secondary 1`] = `
<DocumentFragment>
  <label
    class="QxSwitcher QxSwitcher_size_medium QxSwitcher_color_secondary QxSwitcher_position_left css-udax77-QxSwitcher-root"
    data-testid="testStyleParams-color-secondary"
  >
    <input
      class="QxSwitcher-input css-cekb1n-QxSwitcher-input"
      tabindex="0"
      type="checkbox"
      value=""
    />
    <div
      class="QxSwitcher-toggleContainer css-58wc0x-QxSwitcher-toggleContainer"
    >
      <div
        class="QxSwitcher-toggle css-1yi6y3z-QxSwitcher-toggle"
      />
    </div>
    <div
      class="QxSwitcher-content css-18m9ids-QxSwitcher-content"
    >
      Статус
    </div>
  </label>
</DocumentFragment>
`;

exports[`Switcher style params color success 1`] = `
<DocumentFragment>
  <label
    class="QxSwitcher QxSwitcher_size_medium QxSwitcher_color_success QxSwitcher_position_left css-jwnhzg-QxSwitcher-root"
    data-testid="testStyleParams-color-success"
  >
    <input
      class="QxSwitcher-input css-cekb1n-QxSwitcher-input"
      tabindex="0"
      type="checkbox"
      value=""
    />
    <div
      class="QxSwitcher-toggleContainer css-1hu55cy-QxSwitcher-toggleContainer"
    >
      <div
        class="QxSwitcher-toggle css-1yi6y3z-QxSwitcher-toggle"
      />
    </div>
    <div
      class="QxSwitcher-content css-18m9ids-QxSwitcher-content"
    >
      Статус
    </div>
  </label>
</DocumentFragment>
`;

exports[`Switcher style params color warning 1`] = `
<DocumentFragment>
  <label
    class="QxSwitcher QxSwitcher_size_medium QxSwitcher_color_warning QxSwitcher_position_left css-1ceo964-QxSwitcher-root"
    data-testid="testStyleParams-color-warning"
  >
    <input
      class="QxSwitcher-input css-cekb1n-QxSwitcher-input"
      tabindex="0"
      type="checkbox"
      value=""
    />
    <div
      class="QxSwitcher-toggleContainer css-1hu55cy-QxSwitcher-toggleContainer"
    >
      <div
        class="QxSwitcher-toggle css-1yi6y3z-QxSwitcher-toggle"
      />
    </div>
    <div
      class="QxSwitcher-content css-18m9ids-QxSwitcher-content"
    >
      Статус
    </div>
  </label>
</DocumentFragment>
`;

exports[`Switcher style params disabled false 1`] = `
<DocumentFragment>
  <label
    class="QxSwitcher QxSwitcher_size_medium QxSwitcher_color_brand QxSwitcher_position_left css-1p0djy8-QxSwitcher-root"
    data-testid="testStyleParams-disabled-false"
  >
    <input
      class="QxSwitcher-input css-cekb1n-QxSwitcher-input"
      tabindex="0"
      type="checkbox"
      value=""
    />
    <div
      class="QxSwitcher-toggleContainer css-58wc0x-QxSwitcher-toggleContainer"
    >
      <div
        class="QxSwitcher-toggle css-1yi6y3z-QxSwitcher-toggle"
      />
    </div>
    <div
      class="QxSwitcher-content css-18m9ids-QxSwitcher-content"
    >
      Статус
    </div>
  </label>
</DocumentFragment>
`;

exports[`Switcher style params disabled true 1`] = `
<DocumentFragment>
  <label
    class="QxSwitcher QxSwitcher_size_medium QxSwitcher_color_brand QxSwitcher_disabled QxSwitcher_position_left css-1r4exmy-QxSwitcher-root"
    data-testid="testStyleParams-disabled-true"
  >
    <input
      class="QxSwitcher-input css-cekb1n-QxSwitcher-input"
      disabled=""
      tabindex="0"
      type="checkbox"
      value=""
    />
    <div
      class="QxSwitcher-toggleContainer css-1izznz3-QxSwitcher-toggleContainer"
    >
      <div
        class="QxSwitcher-toggle css-5yfhvw-QxSwitcher-toggle"
      />
    </div>
    <div
      class="QxSwitcher-content css-18m9ids-QxSwitcher-content"
    >
      Статус
    </div>
  </label>
</DocumentFragment>
`;

exports[`Switcher style params position left 1`] = `
<DocumentFragment>
  <label
    class="QxSwitcher QxSwitcher_size_medium QxSwitcher_color_brand QxSwitcher_position_left css-1p0djy8-QxSwitcher-root"
    data-testid="testStyleParams-position-left"
  >
    <input
      class="QxSwitcher-input css-cekb1n-QxSwitcher-input"
      tabindex="0"
      type="checkbox"
      value=""
    />
    <div
      class="QxSwitcher-toggleContainer css-58wc0x-QxSwitcher-toggleContainer"
    >
      <div
        class="QxSwitcher-toggle css-1yi6y3z-QxSwitcher-toggle"
      />
    </div>
    <div
      class="QxSwitcher-content css-18m9ids-QxSwitcher-content"
    >
      Статус
    </div>
  </label>
</DocumentFragment>
`;

exports[`Switcher style params position right 1`] = `
<DocumentFragment>
  <label
    class="QxSwitcher QxSwitcher_size_medium QxSwitcher_color_brand QxSwitcher_position_right css-1p0djy8-QxSwitcher-root"
    data-testid="testStyleParams-position-right"
  >
    <div
      class="QxSwitcher-content css-17vihdq-QxSwitcher-content"
    >
      Статус
    </div>
    <input
      class="QxSwitcher-input css-cekb1n-QxSwitcher-input"
      tabindex="0"
      type="checkbox"
      value=""
    />
    <div
      class="QxSwitcher-toggleContainer css-58wc0x-QxSwitcher-toggleContainer"
    >
      <div
        class="QxSwitcher-toggle css-1yi6y3z-QxSwitcher-toggle"
      />
    </div>
  </label>
</DocumentFragment>
`;

exports[`Switcher style params size large 1`] = `
<DocumentFragment>
  <label
    class="QxSwitcher QxSwitcher_size_large QxSwitcher_color_brand QxSwitcher_position_left css-il2cwy-QxSwitcher-root"
    data-testid="testStyleParams-size-large"
  >
    <input
      class="QxSwitcher-input css-cekb1n-QxSwitcher-input"
      tabindex="0"
      type="checkbox"
      value=""
    />
    <div
      class="QxSwitcher-toggleContainer css-58wc0x-QxSwitcher-toggleContainer"
    >
      <div
        class="QxSwitcher-toggle css-1yi6y3z-QxSwitcher-toggle"
      />
    </div>
    <div
      class="QxSwitcher-content css-1od8eaj-QxSwitcher-content"
    >
      Статус
    </div>
  </label>
</DocumentFragment>
`;

exports[`Switcher style params size medium 1`] = `
<DocumentFragment>
  <label
    class="QxSwitcher QxSwitcher_size_medium QxSwitcher_color_brand QxSwitcher_position_left css-1p0djy8-QxSwitcher-root"
    data-testid="testStyleParams-size-medium"
  >
    <input
      class="QxSwitcher-input css-cekb1n-QxSwitcher-input"
      tabindex="0"
      type="checkbox"
      value=""
    />
    <div
      class="QxSwitcher-toggleContainer css-58wc0x-QxSwitcher-toggleContainer"
    >
      <div
        class="QxSwitcher-toggle css-1yi6y3z-QxSwitcher-toggle"
      />
    </div>
    <div
      class="QxSwitcher-content css-18m9ids-QxSwitcher-content"
    >
      Статус
    </div>
  </label>
</DocumentFragment>
`;

exports[`Switcher style params size small 1`] = `
<DocumentFragment>
  <label
    class="QxSwitcher QxSwitcher_size_small QxSwitcher_color_brand QxSwitcher_position_left css-eyryu-QxSwitcher-root"
    data-testid="testStyleParams-size-small"
  >
    <input
      class="QxSwitcher-input css-cekb1n-QxSwitcher-input"
      tabindex="0"
      type="checkbox"
      value=""
    />
    <div
      class="QxSwitcher-toggleContainer css-58wc0x-QxSwitcher-toggleContainer"
    >
      <div
        class="QxSwitcher-toggle css-1yi6y3z-QxSwitcher-toggle"
      />
    </div>
    <div
      class="QxSwitcher-content css-s2mi71-QxSwitcher-content"
    >
      Статус
    </div>
  </label>
</DocumentFragment>
`;
